{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PC",
            "id": "af1e4b63-6511-42f2-b465-de8dfd07ab64",
            "actions": [
                {
                    "name": "OnClick",
                    "type": "Button",
                    "id": "342f5797-4275-4ba8-a4e9-681f4b8eede7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "8739dcf5-3dcb-423e-80af-340e0f71a10e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0991133c-a0c8-42c7-bebe-367a38a3ab5d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7de6f0f9-71c3-4339-8e1d-a06f244d2c86",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Android",
            "id": "83763946-c5cd-4b7a-a8da-f37f9c6c9f3b",
            "actions": [
                {
                    "name": "OnTab",
                    "type": "Button",
                    "id": "fb3a3c92-9544-44aa-a267-272335cd88aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TapPosition",
                    "type": "Value",
                    "id": "44ffe2de-77c4-4fc4-ab82-2cc058940b59",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e94027e7-d25a-4c38-91d8-011a6d8855d7",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8ae5b16-7fe3-4ea4-9282-68c30a294cb1",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}